Ensure header has minimum height
Add min-height: 100px to the header CSS so the header won't collapse or become too small on short viewports when 17vh yields a very small height. Retains existing top, width, height, and border styles.

--- a/components/layout/header-style.module.css
+++ b/components/layout/header-style.module.css
@@ -3,6 +3,7 @@
     top: 0px;
     width: 100%;
     height: 17vh;
+    min-height: 100px;
     border-bottom: solid 2px #42404E;
 }
 
